Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.5.11.6: May 21st, 2010

* add a bit of a hack to tty detection tests; PlainTextFormatter is valid for
  broken terminfo entries.

* fix support for unpacking of xz tarballs.


pkgcore 0.5.11.5: April 22nd, 2010

* fix yet *another* fucking distutils bit of idiocy.  Piece Of Shit.


pkgcore 0.5.11.4: April 21st, 2010

* fix py3k regression when trying to hash a PackageRestriction.

* drop CDEPEND tracking (unused, hold over from '04 days), and
  newdepend (same era).  Neither are used in >=EAPI0 ; if your
  ebuild breaks, rebase the ebulid to a valid EAPI.


pkgcore 0.5.11.3: March 22nd, 2010

* force all einfo/elog/ewarn style bits to stderr.

* add path attribute to ebuild derived pkg instances; not a guranteed
  part of the api yet, but accessible via pquery --attr path


pkgcore 0.5.11.2: March 16th, 2010

* silence spurious grep QA warnings during metadata sourcing.


pkgcore 0.5.11.1: March 15th, 2010

* fix a major release bug; ebuild-env-utils.sh wasn't packaged in the
  released 0.5.11, this version adds the missing file.

* more declare related fixups; this one a regression from 0.5.10- in
  sourcing /etc/profile.env, it's contents weren't being preserved
  fully due to declare.

* add missing eapi3 phase support- basically just reuses eapi2's since
  the only changes are environmental.


pkgcore 0.5.11: March 14th, 2010

* took me a full night of debugging, but traced down yet another portage
  incompatibility introduced.  gentoo bug 303369; if you've been seeing
  issues where portage merged ebuild envs aren't reused in pkgcore, this
  is now fixed.  Env handling in general was heavily rewritten to be as
  robust as possible and protect against any further breakages from portage.

* env processing is a bit faster now- uses egrep where possible, falling
  back to bash regex where not.
