@@ -9,5 +9,5 @@
 #        is set in /etc/make.globals.  We don't source
 #        /etc/make.globals here because emake is only called from an
 #        ebuild.
-
+[ "${PKGCORE_DEBUG:-0}" != "0" ] && set -x
 exec ${MAKE:-make} ${MAKEOPTS} ${EXTRA_EMAKE} "$@"
