@@ -10,7 +10,8 @@ from pkgcore.ebuild.cpv import versioned_CPV
 from pkgcore.restrictions.packages import AlwaysTrue
 from pkgcore.chksum import get_chksums
 from operator import itemgetter, attrgetter
-from itertools import imap, izip
+from itertools import izip
+from pkgcore import cache
 import os
 
 def iter_till_empty_newline(data):
@@ -37,60 +38,69 @@ def find_best_savings(stream, line_prefix):
     return max(stream, key=lambda (k, v):(len(k) + line_overhead) * v)[0]
 
 
-class PackagesCacheV0(object):
+class PackagesCacheV0(cache.bulk):
 
-    _header_mangling_map = ImmutableDict({'USE':'UPSTREAM_USE',
+    _header_mangling_map = ImmutableDict({
         'FEATURES':'UPSTREAM_FEATURES',
         'ACCEPT_KEYWORDS':'KEYWORDS'})
 
-    _rewrite_map = {'DESC':'DESCRIPTION'}
+    _rewrite_map = {'DESC':'DESCRIPTION', 'repo':'repository'}
     _write_translate = {"DEPENDS": "DEPEND", "RDEPENDS": "RDEPEND",
         "POST_RDEPENDS":"POST_RDEPEND", "DESCRIPTION":"DESC"}
-    inheritable = ('USE', 'CBUILD', 'CHOST',)
+    inheritable = frozenset(('USE', 'CBUILD', 'CHOST', 'repository'))
     _sequences = ('use', 'keywords', 'iuse')
-    _stored_attrs = ('depends', 'rdepends', 'post_rdepends', 'use', 'keywords',
-            'description', 'license', 'slot', 'cbuild', 'chost', 'eapi', 'iuse')
-    _stored_chfs = ('size', 'sha1', 'md5')
+    _pkg_defaults = dict.fromkeys(('BUILD_TIME', 'DEPEND', 'IUSE', 'KEYWORDS',
+        'LICENSE', 'PATH', 'PDEPEND', 'PROPERTIES', 'PROVIDE', 'RDEPEND',
+        'RESTRICT', 'USE', 'DEFINED_PHASES', 'CHOST', 'CBUILD', 'DESC', 'repo'),
+        '')
+    _pkg_defaults.update({'EAPI':'0', 'SLOT':'0'})
+    _pkg_defaults = ImmutableDict(_pkg_defaults)
+
+    _stored_chfs = ('size', 'sha1', 'md5', 'mtime')
+
     version = 0
 
-    def __init__(self, source):
-        self._source = source
+    def __init__(self, location, *args, **kwds):
+        self._location = location
+        cache.bulk.__init__(self, *args, **kwds)
+        vkeys = set(self._stored_chfs)
+        vkeys.update(self._pkg_defaults)
+        vkeys.add("CPV")
+        vkeys.update(x.upper() for x in self._stored_chfs)
+        self._valid_keys = frozenset(vkeys)
 
-    @klass.jit_attr
-    def data(self):
-        if isinstance(self._source, basestring):
-            return iter(open(self._source))
-        return iter(self._source)
+    def _handle(self):
+        return iter(open(self._location))
 
-    @klass.jit_attr
-    def defaults(self):
+    def read_preamble(self, handle):
         return ImmutableDict(
             (self._header_mangling_map.get(k, k), v)
-            for k,v in iter_till_empty_newline(self.data))
+            for k,v in iter_till_empty_newline(handle))
 
-    @klass.jit_attr
-    def pkg_dict(self):
-        self.defaults
+    def _read_data(self):
+        handle = self._handle()
+        preamble = self.preamble = self.read_preamble(handle)
+
         pkgs = {}
         count = 0
+        vkeys = self._valid_keys
         while True:
-            d = dict(iter_till_empty_newline(self.data))
+            raw_d = dict(iter_till_empty_newline(handle))
+
+            d = dict((k, v) for k,v in raw_d.iteritems() if k in vkeys)
             if not d:
                 break
             count += 1
-            try:
-                cpv = versioned_CPV(d.pop("CPV"))
-            except KeyError:
-                # wanker, old format.
-                cpv = versioned_CPV("%s/%s" % (d.pop("CATEGORY"), d.pop("PF")))
+            cpv = d.pop("CPV", None)
+            if cpv is None:
+                cpv = "%s/%s" % (d.pop("CATEGORY"), d.pop("PF"))
 
             d.setdefault('IUSE', d.get('USE', ''))
             for src, dst in self._rewrite_map.iteritems():
                 d.setdefault(dst, d.pop(src, ''))
 
-            pkgs.setdefault(cpv.category, {}).setdefault(cpv.package, {})[
-                cpv.version] = CacheEntry(d, self.defaults)
-        assert count == int(self.defaults.get('PACKAGES', count))
+            pkgs[cpv] = CacheEntry(d, preamble)
+        assert count == int(preamble.get('PACKAGES', count))
         return pkgs
 
     @classmethod
@@ -99,7 +109,7 @@ class PackagesCacheV0(object):
         for key in cls.inheritable:
             try:
                 preamble[key] = find_best_savings(
-                    (d.get(key, '') for d in target_dicts), key)
+                    (d[1].get(key, '') for d in target_dicts), key)
             except ValueError:
                 # empty iterable handed to max
                 pass
@@ -127,50 +137,60 @@ class PackagesCacheV0(object):
         d["MTIME"] = str(os.stat(pkg.path).st_mtime)
         return d
 
-    @classmethod
-    def write_repo(cls, target_source, repo):
-        # try to collapse certain keys down to the profile preamble
-        targets = repo.match(AlwaysTrue, sorter=sorted)
+    def _write_data(self):
+        handler = AtomicWriteFile(self._location)
+        try:
+            self._serialize_to_handle(self.data.items(), handler)
+            handler.close()
+        except:
+            handler.discard()
+            raise
 
-        if not targets:
-            # just open/trunc the target instead, and bail
-            open(target_source, 'wb')
-            return
-
-        handler = AtomicWriteFile(target_source)
-
-        data = [cls._assemble_pkg_dict(pkg) for pkg in targets]
-        preamble = cls._assemble_preamble_dict(data)
+    def _serialize_to_handle(self, data, handler):
+#        data = [self._assemble_pkg_dict(pkg) for pkg in targets]
+        preamble = self._assemble_preamble_dict(data)
 
         for key in sorted(preamble):
             handler.write("%s: %s\n" % (key, preamble[key]))
         handler.write('\n')
 
         spacer = ' '
-        if cls.version != 0:
+        if self.version != 0:
             spacer = ''
 
-        for pkg, pkg_data in izip(targets, data):
-            handler.write("CPV:%s%s\n" % (pkg.cpvstr, spacer))
+        vkeys = self._valid_keys
+        for cpv, pkg_data in sorted(data, key=itemgetter(0)):
+            handler.write("CPV:%s%s\n" % (spacer, cpv))
             for key in sorted(pkg_data):
+                write_key = self._write_translate.get(key, key)
+                if write_key not in vkeys:
+                    continue
                 value = pkg_data[key]
-                if key in preamble:
-                    if value != preamble[key]:
+                if write_key in preamble:
+                    if value != preamble[write_key]:
                         if value:
-                            handler.write("%s:%s%s\n" % (key, spacer, value))
+                            handler.write("%s:%s%s\n" % (write_key, spacer, value))
                         else:
-                            handler.write("%s:\n" % (key,))
+                            handler.write("%s:\n" % (write_key,))
                 elif value:
-                    handler.write("%s:%s%s\n" % (key, spacer, value))
+                    handler.write("%s:%s%s\n" % (write_key, spacer, value))
             handler.write('\n')
-        handler.close()
-        return cls(target_source)
+
+    def update_from_repo(self, repo):
+        # try to collapse certain keys down to the profile preamble
+        targets = repo.match(AlwaysTrue, sorter=sorted)
+
+        if not targets:
+            # just open/trunc the target instead, and bail
+            open(self._location, 'wb')
+            return
+
 
 
 class PackagesCacheV1(PackagesCacheV0):
 
-    inheritable = PackagesCacheV0.inheritable + ('SLOT', 'EAPI', 'LICENSE',
-        'KEYWORDS')
+    inheritable = PackagesCacheV0.inheritable.union(('SLOT', 'EAPI', 'LICENSE',
+        'KEYWORDS'))
 
     @classmethod
     def _assemble_pkg_dict(cls, pkg):
